dodata Swagger dokumentacija za login i logout rute
